<?xml version="1.0"?>
<package>
  <name>ros_param_shortcuts</name>
  <version>0.0.1</version>
  <description>The ros_param_shortcuts package</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/ros_param_shortcuts</url>
  <url type="butracker">https://github.com/davetcoleman/ros_param_shortcuts/issues</url>
  <url type="repository">https://github.com/davetcoleman/ros_param_shortcuts/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
