<?xml version="1.0"?>
<package>
  <name>rosparam_shortcuts</name>
  <version>0.0.2</version>
  <description>The rosparam_shortcuts package</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/rosparam_shortcuts</url>
  <url type="butracker">https://github.com/davetcoleman/rosparam_shortcuts/issues</url>
  <url type="repository">https://github.com/davetcoleman/rosparam_shortcuts/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
